# cti-python-stix2

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .travis.yml.swp  CHANGELOG  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  USING_NEO4J.md  determinsitic-id-checker.py  pyproject.toml  requirements.txt  sco-examples-bundle.json  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  publish-python-package.yml  python-ci-tests.yml
docs/: Makefile  api_ref.rst  bundle--21531315-283d-4604-8501-4b7166e58c84.json  conf.py  contributing.rst  creating.ipynb  datastore_api.rst  guide.rst  index.rst  markings.ipynb  overview.rst  parsing.ipynb  roadmap.rst  serializing.ipynb  ts_support.rst  versioning.ipynb
docs/api/: stix2.base.rst  stix2.common.rst  stix2.confidence.rst  stix2.core.rst  stix2.datastore.rst  stix2.environment.rst  stix2.equivalence.rst  stix2.exceptions.rst  stix2.markings.rst  stix2.observables.rst  stix2.parsing.rst  stix2.pattern_visitor.rst  stix2.patterns.rst  stix2.properties.rst  stix2.sdo.rst  stix2.serialization.rst  stix2.sources.rst  stix2.sro.rst  stix2.utils.rst  stix2.v20.bundle.rst  stix2.v20.common.rst  stix2.v20.observables.rst  stix2.v20.rst  stix2.v20.sdo.rst  stix2.v20.sro.rst  stix2.v21.bundle.rst  stix2.v21.rst  stix2.versioning.rst  stix2.workbench.rst
docs/guide/: FileSystem.ipynb  (+20 more)
examples/: taxii_example.py
stix2/: STIXPatternVisitor.py  __init__.py  base.py  bundle.py  common.py  constants.py  core.py  custom.py  environment.py  exceptions.py  markings.py  object_path.py  observables.py  other.py  parsing.py  pattern_expressions.py  pattern_visitor.py  patterns.py  properties.py  registration.py  registry.py  sdo.py  serialization.py  serialize.py  sro.py  utils.py  version.py  versioning.py  workbench.py
(+333 files in other folders)
